    fonts in the directory as specified by the fontpath
    option in [printer] section too. (Wengier)
  - Added special properties to CONFIG command such as
    "screenwidth", "screenheight", "windowwidth", and
    "windowheight" so that commmands like "CONFIG -GET
    screenwidth" and "CONFIG -GET screenheight" will
    get the current screen width and height. (Wengier)
  - You can now change properties such as "fullscreen",
    "glshader" and "windowposition" dynamically with
    CONFIG command. For example, command "config -set
    fullscreen=true" and "config -set windowposition="
    will now switch on the full-screen mode and center
    the window position respectively. For TrueType font
    output, you can now also change the TTF font and
    the number of rows and columns on the TTF screen
    dynamically using CONFIG command, e.g. "config -set
    ttf.font=test", "config -set ttf.lins=30", and
    "config -set ttf.cols=100". (Wengier)
  - You can now supply a ZIP/7Z file as a parameter to
    DOSBox-X directly so that it will be mounted as C:
    drive when DOSBox-X starts. (Wengeir)
  - Fixed Ctrl+C not working in GNU ed. (Wengier)
  - Fixed large ISO images (>2GB) unable to be mounted
    using IMGMOUNT command. (Wengier)
  - Fixed incorrect behavior for handling trap flags
    in the dynamic core. (koolkdev)
  - Updated the Tiny File Dialog library to the latest
    version v3.8.5, which fixes issues such as the
    compatibility problem with Windows XP. (Wengier)
  - Improved OPL3Duo support, such as adding a buffer
    thread to get rid of slowdowns & breakups in audio
    playback when using the board. (DhrBaksteen)
  - Integrated SVN commits (Allofich)
    - r4392: Improve capturing of Zeliard and fix a
    few percussion-related capturing problems as well.
    - r4393: Remove video page check when drawing
    internal mouse pointer, as the BIOS current page
    is not updated in some cases. Fixes QQP games: Lost